# rtsp-image-capture-rs

./: Cargo.toml
src/: lib.rs  main.rs
src/camera/: mod.rs
src/camera/onvif/: mod.rs  services.rs
src/camera/rtsp_session/: mod.rs  utils.rs
src/decoders/: avcc.rs  mod.rs
